--- a/packages/components/Input/example/Example.html
+++ b/packages/components/Input/example/Example.html
@@ -67,6 +67,11 @@
       }}
     />
   </div>
+
+  <h4>Input de dinheiro</h4>
+  <div class="row">
+    <MoneyInput label="DINHEIRO" />
+  </div>
 </div>
 
 <style>
@@ -96,6 +101,7 @@
   export default {
     components: {
       Input: '../Input.html',
+      MoneyInput: '../Money.html',
     },
     data() {
       return {
