--- a/packages/pos/simulator/view/partials/CreditCard.html
+++ b/packages/pos/simulator/view/partials/CreditCard.html
@@ -8,7 +8,7 @@
 
 <script>
   import Payment from '../../../api/payment.js';
-  import { State } from '../../libs/main.js';
+  import { Core } from '../../libs/main.js';
 
   export default {
     data() {
@@ -30,10 +30,10 @@
         if (isCardInserted) {
           setTimeout(() => {
             Payment.cardEvent();
-            State.toggleCard(true);
+            Core.toggleCard(true);
           }, 500);
         } else {
-          State.toggleCard(false);
+          Core.toggleCard(false);
         }
       },
       _onKeyup(e) {
