--- a/packages/pos/simulator/view/partials/Printer.html
+++ b/packages/pos/simulator/view/partials/Printer.html
@@ -26,7 +26,7 @@
 </div>
 
 <script>
-  import { State } from '../../index.js';
+  import { Core } from '../../index.js';
 
   const onceTransitionEnd = (el, cb) => {
     const onTransitionEnd = e => {
@@ -57,7 +57,7 @@
       },
     },
     oncreate() {
-      State.on('print', (content, options) => {
+      Core.on('print', (content, options) => {
         this.print(content, options);
       });
     },
