--- a/packages/pos/simulator/view/partials/CreditCard.html
+++ b/packages/pos/simulator/view/partials/CreditCard.html
@@ -8,7 +8,7 @@
 
 <script>
   import Payment from '../../../api/payment.js';
-  import { Core } from '../../libs/main.js';
+  import { Core } from '../../index.js';
 
   export default {
     data() {
