--- a/packages/components/Collection/Row.html
+++ b/packages/components/Collection/Row.html
@@ -25,8 +25,6 @@
 </div>
 
 <script>
-  import Router from 'svelte-page';
-
   function findClosest(el, cb) {
     if (!el || el.nodeType !== 1) return null;
     if (el && !cb(el)) return findClosest(el.parentNode, cb);
@@ -75,8 +73,8 @@
     methods: {
       _handleClick({ event, href }) {
         /** If clicked on a "link" row, push the page to the router */
-        if (href) {
-          return Router.go(href);
+        if (href && this.root.router) {
+          return this.root.router.go(href);
         }
 
         const { _hasCustomController } = this.get();
