--- a/packages/components/AppBar/AppBar.html
+++ b/packages/components/AppBar/AppBar.html
@@ -1,7 +1,7 @@
 <header class="appbar" {style}>
   <div class="content">
-    {#if !isAtHome && _isNavigationEnabled}
-      <div class="icon-left" on:click="goback()">
+    {#if _showBack}
+      <div class="icon-left" on:click="goBack()">
         <Icon symbol="chevron-left" width="10px" color={textColor} />
       </div>
     {/if}
@@ -10,9 +10,9 @@
       <div class="title">{title}</div>
     {/if}
 
-    {#if _isNavigationEnabled}
-      <div class="icon-right" on:click="gohome()">
-        <Icon symbol={homeIcon} color={textColor}/>
+    {#if _showHome}
+      <div class="icon-right" on:click="goHome()">
+        <Icon symbol={_isAtHome ? 'home' : 'app-home'} color={textColor}/>
       </div>
     {/if}
   </div>
@@ -26,7 +26,7 @@
     data() {
       return {
         _location: undefined,
-        _isNavigationEnabled: false,
+        _isNavigationEnabled: { back: false, home: true },
         title: undefined,
         textColor: '#425963',
         bgColor: '#f2f2f2',
@@ -43,8 +43,10 @@
           .filter(Boolean)
           .join(';');
       },
-      isAtHome: ({ _location }) => _location === '/',
-      homeIcon: ({ isAtHome }) => (isAtHome ? 'home' : 'app-home'),
+      _isAtHome: ({ _location }) => _location === '/',
+      _showBack: ({ _isAtHome, _isNavigationEnabled }) =>
+        !_isAtHome && _isNavigationEnabled.back,
+      _showHome: ({ _isNavigationEnabled }) => _isNavigationEnabled.home,
     },
     oncreate() {
       const { root } = this;
@@ -74,9 +76,9 @@
       }
     },
     methods: {
-      gohome() {
-        const { isAtHome } = this.get();
-        if (isAtHome) {
+      goHome() {
+        const { _isAtHome } = this.get();
+        if (_isAtHome) {
           return this.root.fire('close');
         }
 
@@ -84,7 +86,7 @@
           this.root.router.go('/');
         }
       },
-      goback() {
+      goBack() {
         if (this.root.router) {
           this.root.router.back();
         }
