Add rollup alias to fix the example import path

--- a/packages/components/Barcode/example/Example.html
+++ b/packages/components/Barcode/example/Example.html
@@ -37,7 +37,7 @@
 <script>
   export default {
     components: {
-      Barcode: '../Barcode.html',
+      Barcode: '@mamba/barcode/Barcode.html',
     },
   };
 </script>
