--- a/packages/components/Button/example/Example.html
+++ b/packages/components/Button/example/Example.html
@@ -58,7 +58,7 @@
 <script>
   export default {
     components: {
-      Button: '../Button.html',
+      Button: '@mamba/button/Button.html',
       Icon: '@mamba/icon',
     },
   };
