--- a/packages/components/Collection/example/Example.html
+++ b/packages/components/Collection/example/Example.html
@@ -40,8 +40,8 @@
   export default {
     components: {
       Icon: '@mamba/icon',
-      Row: '../Row.html',
-      Collection: '../Collection.html',
+      Row: '@mamba/collection/Row.html',
+      Collection: '@mamba/collection/Collection.html',
     },
   };
 </script>
