--- a/packages/components/Dialog/example/Example.html
+++ b/packages/components/Dialog/example/Example.html
@@ -46,9 +46,9 @@
 <script>
   export default {
     components: {
-      Dialog: '../Dialog.html',
-      ConfirmationDialog: '../Confirmation.html',
-      PromisedDialog: '../Promised.html',
+      Dialog: '@mamba/dialog/Dialog.html',
+      ConfirmationDialog: '@mamba/dialog/Confirmation.html',
+      PromisedDialog: '@mamba/dialog/Promised.html',
     },
     methods: {
       refreshPromise() {
