--- a/packages/components/Icon/example/Example.html
+++ b/packages/components/Icon/example/Example.html
@@ -72,8 +72,8 @@
 <script>
   export default {
     components: {
-      Icon: '../Icon.html',
-      RoundIcon: '../Round.html',
+      Icon: '@mamba/icon/Icon.html',
+      RoundIcon: '@mamba/icon/Round.html',
     },
     data() {
       return {
