--- a/packages/components/Input/example/Example.html
+++ b/packages/components/Input/example/Example.html
@@ -100,8 +100,8 @@
 <script>
   export default {
     components: {
-      Input: '../Input.html',
-      MoneyInput: '../Money.html',
+      Input: '@mamba/input/Input.html',
+      MoneyInput: '@mamba/input/Money.html',
     },
     data() {
       return {
