--- a/packages/components/Printable/example/Example.html
+++ b/packages/components/Printable/example/Example.html
@@ -14,7 +14,7 @@
 <script>
   export default {
     components: {
-      Printable: '../Printable.html',
+      Printable: '@mamba/printable/Printable.html',
     },
   };
 </script>
