--- a/packages/components/Progress/example/Example.html
+++ b/packages/components/Progress/example/Example.html
@@ -65,8 +65,8 @@
 <script>
   export default {
     components: {
-      ProgressBar: '../ProgressBar.html',
-      CircularProgress: '../Circular.html',
+      ProgressBar: '@mamba/progress/ProgressBar.html',
+      CircularProgress: '@mamba/progress/Circular.html',
     },
     data() {
       return {
