--- a/packages/components/QRCode/example/Example.html
+++ b/packages/components/QRCode/example/Example.html
@@ -39,7 +39,7 @@
 <script>
   export default {
     components: {
-      QRCode: '../QRCode.html',
+      QRCode: '@mamba/qrcode/QRCode.html',
     },
   };
 </script>
