--- a/packages/components/Sprite/example/Example.html
+++ b/packages/components/Sprite/example/Example.html
@@ -10,7 +10,7 @@
 <script>
   export default {
     components: {
-      Sprite: '../Sprite.html',
+      Sprite: '@mamba/sprite/Sprite.html',
     },
   };
 </script>
