--- a/packages/components/Switch/example/Example.html
+++ b/packages/components/Switch/example/Example.html
@@ -39,7 +39,7 @@
 <script>
   export default {
     components: {
-      Switch: '../Switch.html',
+      Switch: '@mamba/switch',
     },
   };
 </script>
