--- a/packages/components/AppBar/example/Example.html
+++ b/packages/components/AppBar/example/Example.html
@@ -19,7 +19,7 @@
 
   export default {
     components: {
-      AppBar: '../AppBar.html',
+      AppBar: '@mamba/appbar/AppBar.html',
     },
     store: () => store,
   };
