--- a/packages/components/Range/example/Example.html
+++ b/packages/components/Range/example/Example.html
@@ -53,7 +53,7 @@
 <script>
   export default {
     components: {
-      Range: '../Range.html',
+      Range: '@mamba/range/Range.html',
     },
   };
 </script>
