--- a/packages/pos/simulator/view/partials/Printer.html
+++ b/packages/pos/simulator/view/partials/Printer.html
@@ -43,6 +43,8 @@
     WAITING: 'waiting',
   });
 
+  let statePromise;
+
   export default {
     data() {
       return {
@@ -66,14 +68,14 @@
         const { state } = this.get();
         this.set({ usingDithering: !!options.use_dithering });
 
-        /** If there's already printed paper, shred it */
-        const shouldShredFirst = state === STATES.PRINTED;
         const getPrintPromise = () =>
           new Promise(resolve => {
+            console.log('ok comecando a imprimir');
             this.set({
               state: STATES.PRINTED,
               content: content.outerHTML,
             });
+            console.log(content);
             /** Once it finishes printing animation */
             onceTransitionEnd(this.refs.paper, () => {
               this.set({ state: STATES.PRINTED });
@@ -82,7 +84,8 @@
             });
           });
 
-        if (shouldShredFirst) {
+        /** If there's already printed paper, shred it */
+        if (state === STATES.PRINTED) {
           return this.shred().then(getPrintPromise);
         }
 
@@ -96,7 +99,7 @@
 
         /** If not, do nothing */
         if (doesntHasPaper) {
-          return;
+          return Promise.resolve();
         }
 
         /** If there's already printed paper, shred it */
@@ -104,6 +107,7 @@
           this.set({ state: STATES.SHREDDING });
           /** Once it finishes shredding animation */
           onceTransitionEnd(this.refs.paper, () => {
+            console.log('ok terminei de rasgar');
             this.set({ state: STATES.WAITING, content: '' });
             /** Once it finishes the "reset" animation */
             setTimeout(resolve);
@@ -127,9 +131,9 @@
     left: 42px;
     bottom: 584px;
     /**
-      * Re-scale the printer to simulate the difference of density of pixels
-      * Magic scale number = (mockup printer width / real printer witdh) (250/384)
-      */
+                                                                  * Re-scale the printer to simulate the difference of density of pixels
+                                                                  * Magic scale number = (mockup printer width / real printer witdh) (250/384)
+                                                                  */
     transform: scale($paper-scale);
     transform-origin: 0 100%;
 
