Prevent <App/> container margin collapse

--- a/packages/components/App/App.html
+++ b/packages/components/App/App.html
@@ -164,5 +164,7 @@
   .app {
     min-height: 100%;
     background-color: $app-bg-color;
+    overflow-x: hidden;
+    overflow: auto;
   }
 </style>
