--- a/packages/styles/src/helpers.pcss
+++ b/packages/styles/src/helpers.pcss
@@ -5,11 +5,19 @@
   width: 100%;
 }
 
-.h-fixed-center {
-  position: fixed;
+.h-fixed-center,
+.h-absolute-center {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
+}
+
+.h-fixed-center {
+  position: fixed;
+}
+
+.h-absolute-center {
+  position: absolute;
 }
 
 .h-color-gray-darker {
