--- a/packages/components/App/App.html
+++ b/packages/components/App/App.html
@@ -162,7 +162,7 @@
   @import '@mamba/styles/theme.pcss';
 
   .app {
-    min-height: 100%;
+    height: 100%;
     background-color: $app-bg-color;
     overflow-x: hidden;
     overflow: auto;
