--- a/packages/styles/src/setup/typography.pcss
+++ b/packages/styles/src/setup/typography.pcss
@@ -26,37 +26,37 @@ h6 a {
 }
 
 h1 {
-  margin: ($h1-size / 2) 0 ($h1-size / 2.5);
+  margin: 0 0 calc($h1-size / 2.5);
   font-size: $h1-size;
   line-height: 110%;
 }
 
 h2 {
-  margin: ($h2-size / 2) 0 ($h2-size / 2.5);
+  margin: 0 0 calc($h2-size / 2.5);
   font-size: $h2-size;
   line-height: 110%;
 }
 
 h3 {
-  margin: ($h3-size / 2) 0 ($h3-size / 2.5);
+  margin: 0 0 calc($h3-size / 2.5);
   font-size: $h3-size;
   line-height: 110%;
 }
 
 h4 {
-  margin: ($h4-size / 2) 0 ($h4-size / 2.5);
+  margin: 0 0 calc($h4-size / 2.5);
   font-size: $h4-size;
   line-height: 110%;
 }
 
 h5 {
-  margin: ($h5-size / 2) 0 ($h5-size / 2.5);
+  margin: 0 0 calc($h5-size / 2.5);
   font-size: $h5-size;
   line-height: 110%;
 }
 
 h6 {
-  margin: ($h6-size / 2) 0 ($h6-size / 2.5);
+  margin: 0 0 calc($h6-size / 2.5);
   font-size: $h6-size;
   line-height: 110%;
 }
