--- a/packages/components/App/App.html
+++ b/packages/components/App/App.html
@@ -1,6 +1,9 @@
 <svelte:window on:keyup="onKeyup(event)" on:keydown="onKeydown(event)"/>
 
-<div class="app">
+<div
+  class="app"
+  class:has-appbar="hasAppbar"
+>
   <slot></slot>
 </div>
 
@@ -20,6 +23,7 @@
       return {
         navigation: { home: true, back: true },
         shortcuts: true,
+        hasAppbar: false,
       };
     },
     oncreate() {
@@ -165,6 +169,6 @@
     height: 100%;
     background-color: $app-bg-color;
     overflow-x: hidden;
-    overflow: auto;
+    overflow-y: auto;
   }
 </style>
