--- a/packages/components/App/App.html
+++ b/packages/components/App/App.html
@@ -3,6 +3,7 @@
 <div
   class="app"
   class:has-appbar="hasAppbar"
+  class:is-scrollable="scrollable"
 >
   <slot></slot>
 </div>
@@ -23,6 +24,7 @@
       return {
         navigation: { home: true, back: true },
         shortcuts: true,
+        scrollable: true,
         hasAppbar: false,
       };
     },
@@ -169,6 +171,10 @@
     height: 100%;
     background-color: $app-bg-color;
     overflow-x: hidden;
-    overflow-y: auto;
+    overflow-y: hidden;
+
+    &.is-scrollable {
+      overflow-y: auto;
+    }
   }
 </style>
