Import roboto only on desktop builds

--- a/packages/styles/pos.pcss
+++ b/packages/styles/pos.pcss
@@ -1,8 +1,7 @@
 @import './theme.pcss';
-@import 'src/setup/reset.pcss';
-@import 'src/setup/normalize.pcss';
-@import 'src/setup/fonts.pcss';
-@import 'src/setup/typography.pcss';
+@import 'src/reset.pcss';
+@import 'src/normalize.pcss';
+@import 'src/typography.pcss';
 @import 'src/base.pcss';
 @import 'src/helpers.pcss';
 @import 'src/components/*.pcss';
