--- a/packages/styles/src/base.pcss
+++ b/packages/styles/src/base.pcss
@@ -8,7 +8,12 @@
   outline: none !important; /* stylelint-disable-line */
 }
 
+html {
+  height: 100%;
+}
+
 body {
+  height: 100%;
   color: $default-text-color;
   font-family: $default-font-family;
   font-size: $default-font-size;
