--- a/packages/styles/theme.pcss
+++ b/packages/styles/theme.pcss
@@ -1,7 +1,7 @@
 @import 'colors.pcss';
 
 /** Fonts */
-$default-font-family: 'Roboto', Arial, sans-serif;
+$default-font-family: Roboto, sans-serif;
 $default-font-size: 14px;
 
 /** Layers */
