--- a/packages/styles/src/desktop/normalize.pcss
+++ b/packages/styles/src/desktop/normalize.pcss
@@ -1,6 +1,14 @@
 /** Normalize rules for desktop only. Not included on the main build */
 
 /**
+ * 1. Prevent adjustments of font size after orientation changes in iOS.
+ */
+
+html {
+  text-size-adjust: 100%; /* 1 */
+}
+
+/**
  * 1. Add the correct box sizing in Firefox.
  * 2. Show the overflow in Edge and IE.
  */
