--- a/packages/components/Printable/Printable.html
+++ b/packages/components/Printable/Printable.html
@@ -79,6 +79,8 @@
           _state: STATES.PRINTING,
           _printingPromise,
         });
+
+        return _printingPromise;
       },
     },
   };
