Make everything a plugin. Refactor index.js

--- a/packages/pos/simulator/plugins/view/POS.html
+++ b/packages/pos/simulator/plugins/view/POS.html
@@ -26,8 +26,8 @@
 <ControlPanel ref:controlPanel />
 
 <script>
-  import PrinterPanel from '../../drivers/printer/panel.html';
-  import * as PrinterSimulation from '../../drivers/printer/simulation.js';
+  import PrinterPanel from '../../../drivers/printer/panel.html';
+  import * as PrinterSimulation from '../../../drivers/printer/simulation.js';
 
   export default {
     components: {
