--- a/packages/pos/simulator/plugins/view/partials/CreditCard.html
+++ b/packages/pos/simulator/plugins/view/partials/CreditCard.html
@@ -7,8 +7,8 @@
   ></div>
 
 <script>
-  import Payment from '../../../api/payment.js';
-  import { Core } from '../../index.js';
+  import Payment from '../../../../api/payment.js';
+  import Core from '../../../core.js';
 
   export default {
     data() {
@@ -30,10 +30,10 @@
         if (isCardInserted) {
           setTimeout(() => {
             Payment.cardEvent();
-            Core.toggleCard(true);
+            Core.HardwareManager.toggleCard(true);
           }, 500);
         } else {
-          Core.toggleCard(false);
+          Core.HardwareManager.toggleCard(false);
         }
       },
       _onKeyup(e) {
