Change style dir structure for future theming

--- a/packages/components/AppBar/AppBar.html
+++ b/packages/components/AppBar/AppBar.html
@@ -102,6 +102,7 @@
 </script>
 
 <style type="text/postcss">
+  @import '@mamba/styles/settings.pcss';
   @import '@mamba/styles/theme.pcss';
 
   $item-horizontal-margin: 8px;
