--- a/packages/components/Dialog/Dialog.html
+++ b/packages/components/Dialog/Dialog.html
@@ -109,6 +109,7 @@
 </script>
 
 <style type="text/postcss">
+  @import '@mamba/styles/settings.pcss';
   @import '@mamba/styles/theme.pcss';
 
   .dialog {
