--- a/packages/styles/includes/base.pcss
+++ b/packages/styles/includes/base.pcss
@@ -10,22 +10,14 @@
 
 html {
   height: 100%;
-  font-size: $default-font-size;
+  font-size: 14px;
+  font-family: 'Roboto', 'Arial', sans-serif;
 }
 
 body {
   height: 100%;
   color: $default-text-color;
-  font-family: $default-font-family;
   font-style: normal;
   font-weight: normal;
   line-height: 1.4;
-}
-
-small {
-  font-size: 12px;
-}
-
-a {
-  text-decoration: none;
 }
