--- a/packages/styles/desktop.pcss
+++ b/packages/styles/desktop.pcss
@@ -1,10 +1,9 @@
-@import 'src/desktop/fonts.pcss';
-@import './theme.pcss';
-@import 'src/reset.pcss';
-@import 'src/normalize.pcss';
-@import 'src/typography.pcss';
-@import 'src/base.pcss';
-@import 'src/helpers.pcss';
-@import 'src/components/*.pcss';
-@import 'src/desktop/normalize.pcss';
-@import 'src/desktop/base.pcss';
+@import 'theme.pcss';
+@import 'includes/reset.pcss';
+@import 'includes/typography.pcss';
+@import 'includes/base.pcss';
+@import 'includes/helpers.pcss';
+@import 'includes/components/*.pcss';
+@import 'includes/desktop/fonts.pcss';
+@import 'includes/desktop/normalize.pcss';
+@import 'includes/desktop/base.pcss';
