--- a/packages/styles/pos.pcss
+++ b/packages/styles/pos.pcss
@@ -1,10 +1,9 @@
-@import './theme.pcss';
-@import 'src/reset.pcss';
-@import 'src/normalize.pcss';
-@import 'src/typography.pcss';
-@import 'src/base.pcss';
-@import 'src/helpers.pcss';
-@import 'src/components/*.pcss';
+@import 'theme.pcss';
+@import 'includes/reset.pcss';
+@import 'includes/typography.pcss';
+@import 'includes/base.pcss';
+@import 'includes/helpers.pcss';
+@import 'includes/components/*.pcss';
 
 body {
   background-color: $app-bg-color;
